--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "GSheet Cards",
   "name": "Sample Card Creation For GSheet Information",
-  "homepage": "https://pjonp.github.io/gsheet-cards",
+  "homepage": "https://pjonp.github.io/gsheet-cards/",
   "icons": [
     {
       "src": "favicon.ico",
