--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "GSheet Cards",
   "name": "Sample Card Creation For GSheet Information",
+  "homepage": "https://pjonp.github.io/gsheet-cards/",
   "icons": [
     {
       "src": "favicon.ico",
